test/src/e2e_vm_tests/test_programs/should_fail/non_storage_handle_self/src/main.sw
script;

#[allow(dead_code)]
struct S {}

impl S {
    // The only type ascription allowed for self is `core::experimental::storage::StorageHandle`
    fn foo(self: u64, foo: u64) {}
}

fn main() {}
